[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "bcrypt>=4.3.0",
    "celery>=5.4.0",
    "fastapi-users>=14.0.1",
    "fastapi[all]>=0.115.11",
    "mysqlclient>=2.2.7",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "python-jose[cryptography]>=3.4.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
